[workspace]
resolver = "2"
members = [
  ".",
  "conf_derive",
]

[workspace.package]
repository = "https://github.com/cbeck88/conf-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[package]
name = "conf"
version = "0.1.0"
description = "A derive-based config parser for CLI args and env parameters"
categories = ["command-line-interface"]
keywords = [
  "argument",
  "arg",
  "cli",
  "config",
  "configuration",
  "settings",
  "env",
  "environment"
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[lib]
bench = false

[dependencies]
conf_derive = { path = "./conf_derive", version = "0.1" }
clap = { version = "4.5.8", features = ["string"] }

[dev-dependencies]
assert_matches = "1.5"
escargot = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "1"
