[package]
name = "conf_derive"
version = "0.1.1"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true
description = "Derive macro crate used with conf"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.8", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.69"
heck = "0.5.0"
